# atomio

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: audit.yml  ci.yml  cut-prerelease.yml  nightly.yml  pr-title.yml  release-please.yml  release.yml
crates/atomio/: Cargo.toml
crates/atomio/src/: assets.rs  cdp_bridge.rs  main.rs  render.rs  theme.rs
crates/console/: Cargo.toml
crates/console/src/: lib.rs
crates/debugger/: Cargo.toml
crates/debugger/src/: breakpoints.rs  cdp.rs  lib.rs  metro.rs  scripts.rs  transport.rs
crates/debugger/tests/: cdp_integration.rs
crates/editor_core/: Cargo.toml
crates/editor_core/src/: buffer.rs  command.rs  lib.rs  selection.rs  state.rs
crates/inspector/: Cargo.toml
crates/inspector/src/: lib.rs
crates/language/: Cargo.toml
crates/language/src/: lib.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/react_tree/: Cargo.toml
crates/react_tree/src/: lib.rs
crates/terminal/: Cargo.toml
crates/terminal/src/: ansi.rs  grid.rs  lib.rs  terminal.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: files.rs  lib.rs  manifest.rs  recents.rs  state.rs  watcher.rs  workspace.rs
docs/: ROADMAP.md  design.md  dev-practices.md  github-setup.md
docs/design/brand-handoff/: README.md
docs/design/brand-handoff/chats/: chat1.md
docs/design/brand-handoff/project/: brand.html  brand.jsx  data.js
docs/design/handoff/: README.md
docs/design/handoff/chats/: chat1.md
docs/design/handoff/project/: app.jsx  atomio.html  editor.jsx  icons.jsx  palette.jsx  panels.jsx  theme.css
