[workspace]
resolver = "2"
members = [
    "crates/atomio",
    "crates/editor_core",
    "crates/language",
    "crates/debugger",
    "crates/console",
    "crates/inspector",
    "crates/network",
    "crates/react_tree",
    "crates/workspace",
    "crates/terminal",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/piotrpestka/atomio"
rust-version = "1.75"

[workspace.dependencies]
editor_core = { path = "crates/editor_core" }
language = { path = "crates/language" }
debugger = { path = "crates/debugger" }
console = { path = "crates/console" }
inspector = { path = "crates/inspector" }
network = { path = "crates/network" }
react_tree = { path = "crates/react_tree" }
workspace = { path = "crates/workspace" }
terminal = { path = "crates/terminal" }
ropey = "1.6"
