[package]
name = "atomio"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "atomio"
path = "src/main.rs"

[dependencies]
editor_core.workspace = true
language.workspace = true
debugger.workspace = true
console.workspace = true
gpui = "0.2"
rfd = "0.15"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "net"] }
serde_json = "1"
