[package]
name = "atomio"
version = "0.2.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "atomio"
path = "src/main.rs"

[dependencies]
editor_core.workspace = true
language.workspace = true
debugger.workspace = true
console.workspace = true
inspector.workspace = true
network.workspace = true
react_tree.workspace = true
gpui = "0.2"
rfd = "0.17"
tokio = { version = "1", features = ["rt", "macros", "sync", "time", "net"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
dirs = "5"
base64 = "0.22"
