[package]
name = "debugger"
version = "0.0.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "net", "sync", "macros", "time"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
